--- a/editwisata.css
+++ b/editwisata.css
@@ -3,6 +3,7 @@
     margin: 0;
     text-decoration: none;
     list-style: none;
+    box-sizing: border-box;
 }
 body{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -57,37 +58,50 @@ a.klik, a:hover{
     background: rgba(188, 154, 32, 0.9);
     border-radius: 50px;
 }
-
-.artikel{
-    font-style: normal;
-    font-size: 16px;
-    color: black ;
-    padding: 30px 120px 0px 100px;
-    font-family: sans-serif;
-    margin-bottom: 20px;
-    text-align: justify;
-}
-h1{
-    text-align: center;
-    text-transform: uppercase;
-    color: black;
-}
-
 h2{
     text-align: center;
-    text-transform: uppercase;
-    color: black;
-    font-size: small;
+    margin-top: 20px;
 }
-
-h3{
+table, th, td{
+    margin-top: 100px;
+    margin: auto;
+    padding: 3px;
+}
+table{
+    margin-top: 20px;
+    width: 60%
+}
+tr{
+    width: 100%;
+}
+input[type=text]{
+    width: 100%;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: #F2EFAD;
+    height: 23px;
+    outline: none;
+}
+textarea{
+    width: 100%;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: #F2EFAD;
+    outline: none;
+}
+#masukkangambar{
+    background-color: white;
+}
+.tombol button{
+    width: 80px;
+    padding: 3px;
     text-align: center;
-    color: black;
-    font-size: smaller;
+    border-radius: 5px;
+    outline: none;
 }
-
-.artikel img{
-    margin-left: 27%;
+.tombol{
+    margin: 30px 400px;
+    cursor: pointer;
 }
 
 .checkbtn{
@@ -144,9 +158,8 @@ h3{
         font-weight: normal;
         padding: 10px 13px;
     }
-    .artikel{
-        margin-top: 70px;
-        padding: 0px 80px 0px 80px;
+    h2{
+        margin-top: 60px;
     }
 }
 
@@ -204,30 +217,40 @@ h3{
     .menubtn img{
         width: 20px;
     }
-    .artikel{
+
+    h2{
         margin-top: 50px;
-        padding: 0px 80px 0px 80px;
+        font-size: 15px;
     }
-    .artikel h1{
-        font-size: 16px;
+    table, th, td{
+        margin-top: 100px;
+        margin: auto;
+        padding: 3px;
+        font-size: 12px;
     }
-    .artikel h2{
+    table{
+        margin-top: 20px;
+        width: 80%
+    }
+    table, tr{
+        width: 100px;
+    }
+    input[type=text]{
+        width: 100%;
+        height: 23px;
+    }
+    textarea{
+        width: 100%;
+    }
+    #masukkangambar{
         font-size: 10px;
+        background-color: white;
     }
-    .artikel h3{
+    .tombol button{
         font-size: 10px;
+        width: 60px;
     }
-    .artikel p{
-        font-size: 8px;
-    }
-    .artikel pre{
-        font-size: 8px;
-    }
-    .artikel img{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 240px;
-        height: 160px;
-    }
+    .tombol{
+        margin: 30px 400px;
+    }    
 }
