--- a/jadi bayar.css
+++ b/jadi bayar.css
@@ -67,19 +67,19 @@ a.klik, a:hover{
 }
 .atas{
     background-image: url(wotuolu.png);
-    position: absolute;
+    position: relative;
     background-repeat: no-repeat;
-    width: 85%;
-    height: 40%;
-    margin-left: 100px;
-    margin-right: 100px;
+    width: 1000px;
+    height: 300px;
+    margin: auto;
     top: 60px;
     background-size: cover;
     padding-top: 40px;
 }
 .judul{
+    width: 500px;
     text-align: center;
-    margin: 20px 40% 90px;
+    margin: auto;
     padding: 20px;
     color: white;
     text-decoration-line: underline;
@@ -89,10 +89,12 @@ a.klik, a:hover{
     width: 100%;
     height: 100px;
     display: flex;
-    position: absolute;
+    position: relative;
     font-family: sans-serif;
     font-size: 16px;
     background-color: #E1C048;
+    margin-top: 100px;
+    margin-bottom: 50px;
 }
 .tgl{
     text-align: center;
@@ -110,31 +112,29 @@ a.klik, a:hover{
     border: 2px solid black;
     padding: 20px;
 }
-
 .container{
+    position: relative;
     background-color: #5E4B06;
     border-radius: 5px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.3);
     width: 500px;
     height: 280px;
     margin: auto;
-    padding: 30px;
+    padding: 20px;
     align-items: center;
     justify-content: center;
     font-family: sans-serif;
-    margin-top: 30%;
+    top: 100px;
     color: whitesmoke;
-}
-
-h1{
-    text-align: center;
-    font-size: 18px;
 }
 
 .konfirmasi{
     padding: 10px 40px 5px;
 }
-
+.konfirmasi h1{
+    text-align: center;
+    font-size: 16px;
+}
 h2{
     text-align: center;
     font-size: 16px;
@@ -243,6 +243,39 @@ a.pencet:hover{
         font-weight: normal;
         padding: 10px 13px;
     }
+    .atas{
+        width: 900px;
+        height: 280px;
+        margin: auto;
+        top: 50px;
+        padding-top: 40px;
+    }
+    .judul{
+        width: 500px;
+        text-align: center;
+        margin: auto;
+        padding: 20px;
+    }
+    
+    .tgl{
+        font-size: 15px;
+    }
+    
+    .total{
+        font-size: 15px;
+    }
+    .container{
+        height: 250px;
+    }
+    .konfirmasi h1{
+        font-size: 14px;
+    }
+    .konfirmasi h2{
+        font-size: 14px;
+    }
+    .konfirmasi p{
+        font-size: 12px;
+    }
 }
 
 @media only screen and (max-width: 768px){
@@ -298,5 +331,69 @@ a.pencet:hover{
     }
     .menubtn img{
         width: 20px;
+    }
+    .atas{
+        width: 450px;
+        height: 160px;
+        top: 40px;
+        padding-top: 40px;
+    }
+    .judul{
+        width: 450px;
+        padding: 20px;
+    }
+    .judul h1{
+        font-size:16px;
+    }
+    .transaksi{
+        width: 100%;
+        height: 45px;
+        margin-top: 30px;
+        margin-bottom: 10px;
+    }
+    .tgl{
+        margin-right: 15%;   
+        margin-left: 20%;
+        border: 1px solid black;
+        padding: 8px;
+        font-size: 8px;
+    }
+    
+    .total{
+        margin-right: 20%;
+        border: 1px solid black;
+        padding: 8px;
+        font-size: 8px;
+    }
+    .container{
+        top: 70px;
+        width: 300px;
+        height: 180px;
+        padding: 6px;
+    }
+    .konfirmasi h1{
+        font-size: 10px;
+    }
+    .konfirmasi h2{
+        font-size: 10px;
+    }
+    .konfirmasi p{
+        font-size: 8px;
+    }
+    .jadi{
+        font-size: 8px;
+        padding: 0 30px;
+    }
+    .jadiya button{
+        padding: 3px;
+        font-size: 8px;
+        border: 1px solid #ffffff;
+        width: 40px;
+    }
+    .jaditdk button{
+        padding: 3px;
+        font-size: 8px;
+        border: 1px solid #ffffff;
+        width: 40px;
     }
 }
