--- a/kelolawisata.css
+++ b/kelolawisata.css
@@ -84,7 +84,7 @@ h2{
 
 .container table{
     margin: auto;
-    width: 100%;
+    width: 95%;
     background-color: #f1f1f1;
 }
 
@@ -217,5 +217,33 @@ h2{
     }
     .menubtn img{
         width: 20px;
+    }
+
+    h2{
+        font-size: 14px;
+    }
+    
+    .container{
+        top: 50px;
+    }
+    
+    .container table{
+        width: 95%;
+    }
+    
+    .container table tr{
+        height: 25px;
+    }
+    
+    .container table, tr, td{
+        padding-left: 6px;
+    }
+    .container table, tr, th{
+        font-size: 10px;
+    }
+    
+    #btnedit{
+        font-size: 8px;
+        padding: 0px;
     }
 }
